--- a/src/components/Components.css
+++ b/src/components/Components.css
@@ -1,8 +1,9 @@
-*, **::before, *::after {
+*,
+**::before,
+*::after {
   box-sizing: border-box;
   font-family: "Nunito", sans-serif;
 }
-
 
 #list-container {
   width: 400px;
@@ -25,8 +26,6 @@
   width: 100%;
   height: 35px;
 }
-
-
 
 /* 
 * {
@@ -66,9 +65,48 @@ button {
   font-size: 20px;
 }
 
-.RemoveButton, .RemoveButton__text {
+.RemoveButton,
+.RemoveButton__text {
   text-decoration: none !important;
   color: white;
   background-color: black;
 }
 
+/* Hero Banner */
+h1 {
+  font-size: 4rem;
+  margin-bottom: 0;
+}
+
+p {
+  font-size: 1.5rem;
+  margin-top: 0.5;
+}
+
+.hero {
+  height: 30rem;
+  display: flex;
+  justify-content: center;
+}
+
+video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  filter: brightness(50%);
+}
+
+.hero-content {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: #ffaaa5;
+  padding-top: 5rem;
+  max-width: 80%;
+}
+
+/* Cards */
+/* Footer */
