--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,8 @@ code {
 body {
   font-family: "Nunito", sans-serif;
   background-color: #ffd3b6;
+  padding: 0;
+  margin: 0;
 }
 h1 {
   font-family: "Gochi Hand", sans-serif;
