--- a/src/components/Components.css
+++ b/src/components/Components.css
@@ -27,6 +27,14 @@
   height: 35px;
 }
 
+a {
+  text-decoration: none;
+}
+
+a:visited {
+  color: #000000;
+}
+
 /* 
 * {
   margin: 0;
@@ -87,6 +95,7 @@ p {
   height: 30rem;
   display: flex;
   justify-content: center;
+  border-bottom: solid 10px #ffaaa5;
 }
 
 video {
@@ -108,5 +117,39 @@ video {
   max-width: 80%;
 }
 
+.hero-border {
+  background-color: #ffaaa5;
+  height: 1rem;
+  position: absolute;
+}
+
 /* Cards */
+
 /* Footer */
+
+h3 {
+  font-size: 2rem;
+}
+
+.footer {
+  text-align: left;
+  background-color: #ffaaa5;
+  padding: 15px 0px 50px 50px;
+}
+
+.footer h3 {
+  margin-bottom: 25px;
+}
+
+.footer a {
+  color: #ffd3b6;
+}
+
+.footer a:hover {
+  color: #fdffab;
+}
+
+.footer-info p {
+  font-size: 1rem;
+  margin-bottom: 0;
+}
