--- a/src/components/Components.css
+++ b/src/components/Components.css
@@ -8,6 +8,7 @@
 #list-container {
   width: 400px;
   margin: auto;
+  padding-bottom: 30px;
 }
 #list-container ul {
   padding: 0;
@@ -25,6 +26,7 @@
 #list-container input {
   width: 100%;
   height: 35px;
+  
 }
 
 a {
@@ -34,39 +36,6 @@ a {
 a:visited {
   color: #000000;
 }
-
-/* 
-* {
-  margin: 0;
-  padding: 0;
-}
-
-button {
-  background-color: #fdffab;
-}
-
-.ListDisplay {
-  background-color: #fdffab;
-  width: 500px;
-  height: min-content;
-  border-radius: 5px;
-  padding: 20px;
-  box-shadow: 10px 10px 26px 0px rgba(0, 0, 0, 0.35);
-  font-family: "Nunito", sans-serif;
-  font-size: 20px;
-}
-
-.AddItemBox {
-  background: #fdffab;
-  color: #ec645b;
-  margin-top: 1em;
-  margin-bottom: 1em;
-  display: flex;
-  align-items: center;
-  border-radius: 10px;
-  padding: 5px;
-}
- */
 
 .ItemInput {
   font-family: "Nunito", sans-serif;
