added button instead of recipe URL

--- a/src/App.css
+++ b/src/App.css
@@ -58,3 +58,9 @@ h3 {
 .LinkHeader {
   padding: 0px;
 }
+
+.recipe-url {
+  background-color: #a8e6cf !important;
+  color: white !important;
+  border: none !important;
+}
