--- a/src/components/Components.css
+++ b/src/components/Components.css
@@ -26,7 +26,6 @@
 #list-container input {
   width: 100%;
   height: 35px;
-  
 }
 
 a {
@@ -65,6 +64,7 @@ p {
   display: flex;
   justify-content: center;
   border-bottom: solid 10px #ffaaa5;
+  margin-bottom: 25px;
 }
 
 video {
@@ -161,4 +161,8 @@ video {
 .footer-info p {
   font-size: 1rem;
   margin-bottom: 0;
+}
+
+.my-shopping-list {
+  font-size: 3rem;
 }
