Removed blue hover on navCards
Added :hover styles to .nav-card-link to remove blue

--- a/src/components/Components.css
+++ b/src/components/Components.css
@@ -123,6 +123,11 @@ video {
   overflow: hidden;
 }
 
+.nav-card-link:hover {
+  text-decoration: none;
+  color: black;
+}
+
 .btn-primary {
   background-color: #a8e6cf !important;
   color: white !important;
