Added media queries for h1
Added media query stylings for .hero-content h1

--- a/src/components/Components.css
+++ b/src/components/Components.css
@@ -167,3 +167,9 @@ video {
   font-size: 1rem;
   margin-bottom: 0;
 }
+
+@media (max-width: 560px) {
+  .hero-content h1 {
+    font-size: 4rem;
+  }
+}
